<resources>
    <string name="app_name">Mneme</string>
    <string name="deck_name_hint">Deck Name</string>
    <string name="deck_description_hint">Deck Description</string>
    <string name="add_your_new_deck_text">Add Your New Deck</string>
    <string name="deck_first_language_hint">Deck content language</string>
    <string name="deck_second_language_hint">Deck definition language</string>
    <string name="deck_color">Deck Color</string>
    <string name="bt_description_add_new_card">Add New Card</string>
    <string name="card_content_definition_hint">%1$s word or sentence Definition</string>
    <string name="hint_text">Text</string>
    <string name="card_value_definition_hint">%1$s word or sentence Definition</string>
    <string name="deck_activity_title">Your Decks</string>
    <string name="search_deck_title">Search Deck</string>
    <string name="start_quiz_button_text">Quiz</string>
    <string name="deck_languages">%1$s &amp; %2$s</string>
    <string name="cards_sum">%1$s Cards</string>
    <string name="on_no_deck_text_hint">To add a deck, press the + button located at the bottom right of your screen.</string>
    <string name="on_no_card_text_hint">To add cards, press the + button located at the bottom right of your screen and to start revising your cards, press one of the buttons at the bottom left of your screen.</string>
    <string name="no_deck_and_card">Add a deck or a card by pressing the + button at the corner right of your screen.</string>
    <string name="card_image_bg_hint">card image background</string>
    <string name="settings_hint">Settings</string>
    <string name="themes_head_text">Theme</string>
    <string name="full_screen_button_description_text">Full screen button</string>
    <string name="exit_button_text_hint">Exit Button</string>
    <string name="flash_card_button_text">Flash Card</string>
    <string name="flashcard_score_title_text">%1$s Complete:</string>
    <string name="known_cards_text">Known cards</string>
    <string name="missed_cards_text">Missed cards</string>
    <string name="revise_missed_cards_button_txt">Revise missed cards</string>
    <string name="restart_quiz_with_previous_cards_button_text">Restart quiz with previous cards</string>
    <string name="restart_quiz_with_all_cards_button_text">Restart quiz with all cards</string>
    <string name="back_to_deck_text_button">Back to deck</string>
    <string name="edit_deck_menu_hint">Edit Deck</string>
    <string name="delete_deck_menu_hint">Delete Deck</string>
    <string name="expand_card_button_text">Expand</string>
    <string name="category_color_picker_title">Category Color</string>
    <string name="background_text_title">Background</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bt_description_add_new_deck">Add new deck</string>
    <string name="profile_tab_title">Profile</string>
    <string name="deck_tab_hint">Deck</string>
    <string name="timed_flash_card_text_button">Timed Flash Card</string>
    <string name="known_button_text">Known</string>
    <string name="no_button_text">known Not</string>
    <string name="total_revised_cards_text">Revised cards</string>
    <string name="multiple_choice_quiz_button_text">Multiple-choice quiz</string>
    <string name="warning_icon">Warning Icon</string>
    <string name="revised_cards_sum_profile">Revised cards: %1$s</string>
    <string name="bt_flip_text">Flip</string>
    <string name="bt_start_writing_quiz_game_text">Writing quiz</string>
    <string name="et_user_answer_hint">Write your anwere here</string>
    <string name="bt_match_quiz_mode_text">Matching cards</string>
    <string name="title_match_quiz_score">You did it!</string>
    <string name="cards_left_match_quiz_score">You have %1$s cards left in your deck what\'s next?</string>
    <string name="bt_continue_match_quiz_score">Revise more cards</string>
    <string name="text_cards_left_in_deck">%1$d cards left in this deck.</string>
    <string name="text_all_cards_learned">All cards learned. Well done!</string>
    <string name="bt_restart_match_quiz_score">RESTART</string>
    <string name="bt_back_to_deck_match_quiz_score">BACK TO DECK</string>
    <string name="hint_deck_search_field">Deck name</string>
    <string name="hint_card_search_field">Card content</string>
    <string name="text_accuracy_mini_game_review">%1$d%%</string>
    <string name="tx_flash_card_game_card_orientation_front">Front</string>
    <string name="text_back">Back</string>
    <string name="text_tap_to_flip">Tap to flip</string>
    <string name="bt_flash_card_game_start">Flashcards</string>
    <string name="text_move">Move Sum:</string>
    <string name="text_missed_move_sum">Missed move:</string>
    <string name="bt_text_flash_card_timed">Timed flash card</string>
    <string name="tv_settings_title">Settings</string>
    <string name="rb_random_settings">Random</string>
    <string name="rb_creation_time_settings">Creation date</string>
    <string name="tv_filters_settings_section_title">Filters</string>
    <string name="tv_space_repetition_settings_title">Space repetition</string>
    <string name="rb_by_card_level_setting_text">By card level</string>
    <string name="cb_card_to_be_revised_first_setting_text">Card to be revised first</string>
    <string name="cb_card_to_be_revised_only_setting_text">Card to be revised only</string>
    <string name="tv_card_orientation_setting_section_title">Card orientation</string>
    <string name="tv_card_count_setting_section_title">Card count</string>
    <string name="tv_card_count_setting_section_hint">card count</string>
    <string name="rb_front_and_back_setting_text">Front and Back</string>
    <string name="rb_back_and_front_setting_text">Back and Front</string>
    <string name="bt_apply_and_restart_quiz_settings_text">Apply and restart quiz</string>
    <string name="text_on_no_more_cards_error">Looks like you do not have any cards to revise. Please create new cards or unable the show unknown cards only option in your settings.</string>
    <string name="bt_unable_unknown_cards_only_text">UNABLE UNKNOWN CARDS ONLY</string>
    <string name="tv_cards_text">Cards</string>
    <string name="tv_deck_text">Decks</string>
    <string name="tv_known_cards_text">Known cards</string>
    <string name="tv_language_section_settings">Language</string>
    <string name="tv_others_section_settings">Others</string>
    <string name="bt_privacy_text">Privacy policy</string>
    <string name="bt_contact_text">Contact the developer</string>
    <string name="bt_help_text">Help</string>
    <string name="bt_rate_the_app_text">Rate Recall</string>
    <string name="bt_about_recall_text">About Recall</string>
    <string name="tv_space_repetition_title">Space repetition box</string>
    <string name="ti_repeat_card_in_days_hint">Repeat card in … days</string>
    <string name="bt_help_button_text">Help Button</string>
    <string name="ch_flash_card_text">Flash Card</string>
    <string name="cp_true_or_false_text">True or False</string>
    <string name="cp_multi_answer_card_text">Multi Answer Card</string>
    <string name="til_card_content_hint">Card content</string>
    <string name="til_card_definition_hint">Card Definition</string>
    <string name="cp_true_text">True</string>
    <string name="cp_false_text">False</string>
    <string name="bt_test_quiz_game_text">Quiz</string>
    <string name="on_card_clicked_hint">Choose on of the alternatives below</string>
    <string name="bt_rewind">REWIND</string>
    <string name="bt_text_add">Add</string>
    <string name="bt_text_update">Update</string>
    <string name="bt_text_cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="til_error_card_content">Card content required</string>
    <string name="til_error_card_definition">Card definition required</string>
    <string name="cp_error_correct_definition">At least one definition must be correct. Check the box to the right of this field to mark it as correct, and uncheck it to mark it as incorrect.</string>
    <string name="tv_title_data_review">Data</string>
    <string name="this_week_profile_title">This week</string>
    <string name="tv_add_new_deck">Add new deck</string>
    <string name="tv_update_deck">Update deck</string>
    <string name="tv_add_new_card">Add new card</string>
    <string name="tv_update_card">Update card</string>
    <string name="bt_action">Action</string>
    <string name="error_no_card_definition">No definition found</string>
    <string name="error_read">Failed to read text</string>
    <string name="bt_description_button_speak">Button speak</string>
    <string name="tv_quiz_mode_title">Study</string>
    <string name="bt_save">SAVE</string>
    <string name="content_description_save">Save the all created cards</string>
    <string name="content_welcome_to_recall">📣 Welcome to Mneme! \nAn app that lets you create your own quizzes and interact with them in multiple ways. Whether you\'re looking to quickly revise your courses 📚, to test your knowledge 🎓, or simply to take notes 🗒️, Mneme has you covered.</string>
    <string name="content_cards">In Mneme, questions are represented as cards 🃏 stored in decks. Each question can have one or multiple answers. And each answer can be correct ✅ or incorrect ❎.</string>
    <string name="next">Next</string>
    <string name="content_quiz">Study with mneme through quizzes and flash cards.</string>
    <string name="content_space_repetition">Additionally, Mneme classifies your cards by memorization level 🧮. This helps you understand how well you know a specific card and how frequent it will appear during quizzes.</string>
    <string name="error_message_on_no_description_found">No description found</string>
    <string name="title_unsaved_cards">Unsaved card</string>
    <string name="message_unsaved_cards">You have an ongoing card creation.</string>
    <string name="message_card_registered">Your cards has been registered</string>
    <string name="bt_text_mic">Speech to text</string>
    <string name="bt_text_settings">Settings</string>
    <string name="bt_change_view">Change view</string>
    <string name="bt_text_translate">Translate</string>
    <string name="bt_text_detect_text_with_image">Detect text with image</string>
    <string name="bt_description_back_to_settings">Back to settings</string>
    <string name="bt_description_exit">Exit</string>
    <string name="deck_details">Deck details</string>
    <string name="export">Export</string>
    <string name="export_deck">Export Deck</string>
    <string name="format">Format</string>
    <string name="txt">.txt</string>
    <string name="text_separator">Text separator</string>
    <string name="sort_cards">Sort cards</string>
    <string name="sort_by_creation_date">Sort by creation date</string>
    <string name="sort_by_card_level">Sort by card level</string>
    <string name="sort_alphabetically">Sort alphabetically</string>
    <string name="sort_by_card_sum">Sort by card sum</string>
    <string name="sort_decks">Sort decks</string>
    <string name="include_subdecks">Include subdecks</string>
    <string name="credits_and_attributions">Credits And Attributions</string>
    <string name="credits_open_tdb">The trivia questions available for download are provided by OpenTDB. This content is used under the Creative Commons Attribution-ShareAlike 4.0 International License (CC BY-SA 4.0).</string>
    <string name="credits_title_open_trivia_database_opentdb">Open Trivia Database (OpenTDB)</string>
    <string name="credits_title_google_ml_kit">Google ML Kit</string>
    <string name="credits_text_google_ml_kit">Powering our on-device intelligence for a private learning experience.</string>
    <string name="credits_leitner_system">Our spaced repetition logic is based on the research of Sebastian Leitner.</string>
    <string name="credits_title_leitner_system">Leitner System</string>
</resources>