<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bt_scan_image"
        android:title="@string/bt_text_detect_text_with_image"
        android:icon="@drawable/icon_document_scanner"
        android:iconTint="?colorOnSurface"
        android:contentDescription="@string/bt_text_detect_text_with_image"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/bt_mic"
        android:icon="@drawable/icon_mic"
        android:iconTint="?colorOnSurface"
        android:title="@string/bt_text_mic"
        android:contentDescription="@string/bt_text_mic"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/bt_translate"
        android:icon="@drawable/icon_translate"
        android:iconTint="?colorOnSurface"
        android:title="@string/bt_text_translate"
        android:contentDescription="@string/bt_text_translate"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/save"
        android:title="@string/bt_save"
        android:iconTint="?colorOnSurface"
        android:contentDescription="@string/content_description_save"
        app:showAsAction="ifRoom" />


</menu>