<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_deck_menu"
        android:title="@string/search_deck_title"
        android:icon="@drawable/icon_search"
        app:showAsAction="ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/view_deck_menu"
        android:icon="@drawable/icon_grid_view"
        android:iconTint="?colorOnSurface"
        android:title="@string/bt_change_view"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settings_deck_menu"
        android:icon="@drawable/icon_settings"
        android:iconTint="?colorOnSurface"
        android:title="@string/bt_text_settings"
        app:showAsAction="ifRoom" />

</menu>