<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/main_item"
        android:title="Destinations">
        <menu>
            <item
                android:id="@+id/deckFragment"
                android:title="@string/deck_tab_hint"
                android:icon="@drawable/icon_deck_bottom_navbar"
                android:checkable="true"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/profileFragment"
                android:title="@string/profile_tab_title"
                android:icon="@drawable/icon_profile_bottom_navbar"
                android:checkable="true"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/settingsFragment"
                android:title="@string/settings_hint"
                android:icon="@drawable/icon_settings_bottom_navbar"
                android:checkable="true"
                app:showAsAction="ifRoom"/>
        </menu>
    </item>
</menu>