<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_on_no_card_root_ly"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@drawable/error_card_border"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/warning_icon"
            android:src="@drawable/icon_warning" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_sm"
            android:text="@string/text_on_no_more_cards_error"
            android:textAlignment="center"
            android:textColor="?colorOnError"
            android:textAppearance="@style/TextAppearance.App.TitleSmall"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_unable_unknown_card_only"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?colorOnError"
            android:text="@string/bt_unable_unknown_cards_only_text"
            android:textColor="@color/red200"
            app:cornerRadius="@dimen/radius_base"
            android:layout_marginTop="@dimen/space_sm"
            android:textAppearance="@style/TextAppearance.App.BodyMedium"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_back_to_deck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?colorOnError"
        android:text="@string/back_to_deck_text_button"
        android:textColor="@color/red200"
        app:cornerRadius="@dimen/radius_base"
        android:textAppearance="@style/TextAppearance.App.BodyMedium"/>

</LinearLayout>