<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:backgroundTint="?colorSurfaceContainerLowest"
    android:paddingBottom="@dimen/space_lg">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/drag_handle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_decks"
        android:textSize="@dimen/text_base"
        android:fontFamily="@font/open_sans_bold"
        android:textColor="?colorOnSurface"
        android:layout_marginBottom="@dimen/space_lg"
        android:layout_marginHorizontal="@dimen/space_lg" />

    <RadioGroup
        android:id="@+id/rg_deck_sort_pref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_deck_sort_by_creation_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/sort_by_creation_date"
            android:textColor="?colorOnSurface"
            android:layout_marginHorizontal="@dimen/space_lg" />

        <RadioButton
            android:id="@+id/rb_deck_sort_by_card_sum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/sort_by_card_sum"
            android:textColor="?colorOnSurface"
            android:layout_marginHorizontal="@dimen/space_lg" />

        <RadioButton
            android:id="@+id/rb_deck_sort_alphabetically"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/sort_alphabetically"
            android:textColor="?colorOnSurface"
            android:layout_marginHorizontal="@dimen/space_lg" />

    </RadioGroup>

</LinearLayout>